<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutAboutMenuHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:background="@drawable/background_about"
    android:orientation="vertical"
    android:visibility="gone">


    <RelativeLayout
        android:id="@+id/layoutTopAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnCloseAboutMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_close_white"
            android:tint="@color/colorBlack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/_6sdp"
            android:text="@string/about"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold" />

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtVersionAbout"
        android:layout_below="@+id/layoutTopAbout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:text="@string/about_data1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16ssp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/about_data2"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:autoLink="web"
                android:text="@string/about_data3"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:autoLink="email"
                android:text="@string/about_data4"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:autoLink="web"
                android:text="@string/about_data5"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

    </ScrollView>


    <TextView
        android:id="@+id/txtVersionAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_4sdp"
        android:gravity="center"
        android:padding="@dimen/_4sdp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/_13ssp" />

</RelativeLayout>